# IntersectionDetection

./: .gitignore  CMakeLists.txt  README.md  file.json
NitroCppTest-JoseArtur/: CMakeLists.txt
NitroCppTest-JoseArtur/src/document/json/: JsonDocument.cpp
NitroCppTest-JoseArtur/src/loader/: Loader.h
NitroCppTest-JoseArtur/src/shape/: Shape.h
NitroCppTest-JoseArtur/src/shape/rectangle/: Rectangle.h
NitroCppTest-JoseArtur/src/shapeintersector/: ShapeIntersector.cpp
NitroCppTest-JoseArtur/tests/: ut_ShapeIntersector.cpp
src/: BusinessLogic.cpp  BusinessLogic.h  Document.h  Intersection.cpp  Intersection.h  JsonDocument.cpp  JsonDocument.h  Rectangle.cpp  Rectangle.h  Shape.h  ShapeIntersector.cpp  ShapeIntersector.h  main.cpp
src/businesslogic/: BusinessLogic.cpp  BusinessLogic.h
src/document/: Document.h
src/document/json/: JsonDocument.h
src/intersection/: Intersection.cpp  Intersection.h
src/loader/: Loader.cpp
src/shape/rectangle/: Rectangle.cpp
src/shapeintersector/: ShapeIntersector.h
tests/: json_test.json  tests.cpp  ut_JsonDocument.cpp  ut_Loader.cpp  ut_Rectangle.cpp  ut_RectangleManager.cpp
tests/mocks/: MockShape.h
